--- a/gb/20/3/25/n11973181.md
+++ b/gb/20/3/25/n11973181.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ghguyw2714/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ghguyw2714/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ghguyw2714/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ghguyw2714/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>阿里山花季3/30日本树医樱花外科讲座</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/8786fc440d572c4a0b4956dbd5b7ab9f-600x400.jpg" />
 <h6>日本树医──詹凤春。（嘉义林管处提供）
 </h6>
 <hr>
-<p>【大纪元2020年03月25日讯】（大纪元记者李撷璎台湾嘉义报导）<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E9%98%BF%E9%87%8C%E5%B1%B1%E8%8A%B1%E5%AD%A3.md#1">阿里山花季</a>期间，林务局嘉义林区管理处今年特地邀请台湾首位获得日本<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%A0%91%E5%8C%BB.md#1">树医</a>资格的女树医──詹凤春博士，于阿里山国家森林游乐区办理<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%A8%B1%E8%8A%B1.md#1">樱花</a>宣导讲座，课程分上下午2场次进行。</p>
-<figure id="11973184" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/03/b62ec47d38ae308e71a020000af51312.png" alt="QRcode 报名用。" width="500" /><figcaption class="wp-caption-text">QRcode报名用。（嘉义林管处提供）</figcaption></figure>
-<p>上午9－12时讲授<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%A8%B1%E8%8A%B1.md#1">樱花</a>基本特性、常见病害外，还有下午1－4时的外科实际操作。让参加学员除了欣赏花团锦簇的<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E9%98%BF%E9%87%8C%E5%B1%B1%E8%8A%B1%E5%AD%A3.md#1">阿里山花季</a>，更带着满满的知识回家；活动于3月26日上午9时起开始报名，全程免费、额满为止。</p>
-<figure id="11973185" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/03/a4f6153e8aa0ef2b7f5375490f4780cc-450x611.jpg" alt="樱花外科讲座海报。" width="500" /><figcaption class="wp-caption-text">樱花外科讲座海报。（嘉义林管处提供）</figcaption></figure>
+<p>【大纪元2020年03月25日讯】（大纪元记者李撷璎台湾嘉义报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%98%BF%E9%87%8C%E5%B1%B1%E8%8A%B1%E5%AD%A3.md#1">阿里山花季</a>期间，林务局嘉义林区管理处今年特地邀请台湾首位获得日本<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%A0%91%E5%8C%BB.md#1">树医</a>资格的女树医──詹凤春博士，于阿里山国家森林游乐区办理<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%A8%B1%E8%8A%B1.md#1">樱花</a>宣导讲座，课程分上下午2场次进行。</p>
+<figure id="11973184" aria-describedby="caption-11973184" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/03/b62ec47d38ae308e71a020000af51312.png" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/03/b62ec47d38ae308e71a020000af51312.png" alt="QRcode 报名用。" width="500" /></a><figcaption id="caption-11973184" class="wp-caption-text">QRcode报名用。（嘉义林管处提供）</figcaption></figure>
+<p>上午9－12时讲授<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%A8%B1%E8%8A%B1.md#1">樱花</a>基本特性、常见病害外，还有下午1－4时的外科实际操作。让参加学员除了欣赏花团锦簇的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%98%BF%E9%87%8C%E5%B1%B1%E8%8A%B1%E5%AD%A3.md#1">阿里山花季</a>，更带着满满的知识回家；活动于3月26日上午9时起开始报名，全程免费、额满为止。</p>
+<figure id="11973185" aria-describedby="caption-11973185" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/03/a4f6153e8aa0ef2b7f5375490f4780cc-450x611.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/03/a4f6153e8aa0ef2b7f5375490f4780cc-450x611.jpg" alt="樱花外科讲座海报。" width="500" /></a><figcaption id="caption-11973185" class="wp-caption-text">樱花外科讲座海报。（嘉义林管处提供）</figcaption></figure>
 <h2>日本最新外科手法导入 促进樱花提高抵抗力</h2>
 <p>阿里山国家森林游乐区内的樱花早期由日本人引种试种并大量栽植，打造充满东洋情怀的景致，一解日人思乡之情，而樱花更是阿里山花季代名词，特别是染井吉野樱，盛开时粉如白雪及花谢时的樱吹雪，独特景致常吸引游客慕名而来。</p>
-<figure id="11973186" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/03/e49e834628c7b2a37cb243d52a71a5ab-450x600.jpg" alt="樱花树干腐朽情形。" width="500" /><figcaption class="wp-caption-text">樱花树干腐朽情形。（嘉义林管处提供）</figcaption></figure>
-<p>但在阿里山环境气候潮湿的情况下，樱花老树易罹患俗称“天狗巢病”的簇叶病，也有树干易腐朽的问题，进而影响开花量，嘉义林管处为维护百年樱花树，自108年起委托台湾首位女<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%A0%91%E5%8C%BB.md#1">树医</a>师詹凤春团队至阿里山处理樱花养护工作，以尊重树木的手法、配合植物生理期程，完整建立樱花树籍资料、日常养护、土壤改良、病虫害防治及樱花树外科手术等作业。</p>
+<figure id="11973186" aria-describedby="caption-11973186" style="width: 375px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/03/e49e834628c7b2a37cb243d52a71a5ab-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2020/03/e49e834628c7b2a37cb243d52a71a5ab-450x600.jpg" alt="樱花树干腐朽情形。" width="375" b="500" /></a><figcaption id="caption-11973186" class="wp-caption-text">樱花树干腐朽情形。（嘉义林管处提供）</figcaption></figure>
+<p>但在阿里山环境气候潮湿的情况下，樱花老树易罹患俗称“天狗巢病”的簇叶病，也有树干易腐朽的问题，进而影响开花量，嘉义林管处为维护百年樱花树，自108年起委托台湾首位女<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%A0%91%E5%8C%BB.md#1">树医</a>师詹凤春团队至阿里山处理樱花养护工作，以尊重树木的手法、配合植物生理期程，完整建立樱花树籍资料、日常养护、土壤改良、病虫害防治及樱花树外科手术等作业。</p>
 <p>今年在阿里山花季期间搭配樱花外科讲座，除了室内解说课程让民众了解樱花各样基础概念，下午课程安排现地实作，邀请民众实际操作，了解树医如何处理樱花腐朽；以日本最新外科手法导入，在树洞内填充吸水资材及杀菌药物，并搭配土壤环境调整，引导树木自身活力、促进伤口愈合能力。</p>
 <p>嘉义林管处表示，期盼在詹树医团队专业处理后，可以让民众看到更美的樱花绽放；透过樱花宣导讲座，更可为民众带来植物养护的知识、连结人与樱花间的情感，让来访游客除了带走阿里山花季美丽盛开的回忆外，更带着丰富知识回家。</p>
 <p><strong>活动资讯看这里：</strong></p>
@@ -24,42 +24,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/19/2/25/n11069675.md#1">组图：春季樱花秘境 2019京都五大美景</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/19/3/26/n11140935.md#1">阿里山花季系列活动二部曲 3/30与樱花深入交谈　</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/19/3/28/n11145920.md#1">组图:“落樱缤纷”若梦境 武陵农场樱花之美</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/2/26/n11897522.md#1">台摄影师：拉拉山樱花之美 赏樱的世外桃源</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/10/n11930090.md#1">2020阿里山花季 敲响四季森林序曲</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/11/n11932436.md#1">台湾阿里山花季 紫藤花、樱花及九重葛争艳</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/24/n11969635.md#1">三百年老树病了 清水岩二叶松要吊点滴</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/25/n11973126.md#1">配合防疫政策 拦检查获违反居家检疫者</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/25/n11972968.md#1">当沉睡的结核菌成为人生重要时刻不速之客</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/25/n11973038.md#1">“地球一小时”活动  藉由关灯正视气候变迁</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/2/25/n11069675.md#1">组图：春季樱花秘境 2019京都五大美景</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/26/n11140935.md#1">阿里山花季系列活动二部曲 3/30与樱花深入交谈　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/28/n11145920.md#1">组图:“落樱缤纷”若梦境 武陵农场樱花之美</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/26/n11897522.md#1">台摄影师：拉拉山樱花之美 赏樱的世外桃源</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11930090.md#1">2020阿里山花季 敲响四季森林序曲</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11932436.md#1">台湾阿里山花季 紫藤花、樱花及九重葛争艳</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11969635.md#1">三百年老树病了 清水岩二叶松要吊点滴</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689924.md#1">黄敏惠表扬189位模范儿童</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689366.md#1">嘉靖乾隆巧思竞艳  青花彩瓷景泰蓝南院登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689127.md#1">屏东连6年臭氧王 环盟吁县长候选人表态</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11101863.md#1" target="_blank">【征文】章阁：中共设风水乱局 破坏北京古城</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11965551.md#1">分析：大疫之下中国两千万手机用户消失</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11964881.md#1">武汉病例清零内幕被曝光 北京通知露端倪</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ghguyw2714/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ghguyw2714/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/25/n11973181.htm">阿里山花季3/30日本树医樱花外科讲座</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/25/n11973181.htm">阿里山花季3/30日本树医樱花外科讲座</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ghguyw2714/djy/blob/master/gb/20/3/25/n11973181.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ghguyw2714/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ghguyw2714/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ghguyw2714/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973181.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
